# LongRanger

./: README.md
central/: CMakeLists.txt  README.rst  prj.conf
central/src/: main.c
peripheral/: CMakeLists.txt  Kconfig  Kconfig.rpi_pico_w  README.rst  prj.conf
peripheral/boards/: nrf52840dk_nrf52840.conf  rpi_pico_w.conf  rpi_pico_w.overlay
peripheral/drivers/: CMakeLists.txt  Kconfig
peripheral/drivers/bt/: CMakeLists.txt  Kconfig
peripheral/drivers/bt/zephyr_cyw43/: CMakeLists.txt  Kconfig.rpi_pico_w
peripheral/drivers/bt/zephyr_cyw43/src/: cyw43_bt.h  zephyr_cyw43_drv.c  zephyr_cyw43_hci.c  zephyr_cyw43_log.h
peripheral/src/: hts.c  main.c
